# raspberry_pi_kiosk

./: .gitignore  .vscode  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/custom_prompt/: .p10k.zsh  how_to_install_jetbrains_nerd_fonts.txt
.devcontainer/git_hooks/: commit_msg_config.yaml  pre_commit_config.yaml
.devcontainer/git_hooks/python/: pre_commit_config.yaml
.devcontainer/git_hooks/rust/: pre_commit_config.yaml
.devcontainer/scripts/: base_specfile  postCreateCommand.sh  project_manager.py  remove_empty_lines.py
.devcontainer/scripts/python/: project_manager.sh  remove_empty_lines.py
.devcontainer/scripts/rust/: project_manager.sh
.devcontainer/vscode_settings/: settings.json
src/: install-kiosk-v2.sh  install-kiosk.sh  kiosk-setup.sh  kiosk_setup.sh  test_ob.sh  utils.sh
src/scripts/: autostart
src/scripts/button/: button_handler.service
src/scripts/button_handler/: button_handler.py  button_handler.service
src/scripts/openbox/: autostart
src/scripts/screensavers/: conways_game_of_life.py  template.py  test.ipynb  wolfram_elementary_cellular_automaton.py
src/scripts/splash/: splash.service
src/scripts/wake_on_sound/: wake_on_sound.service  wake_on_sound.sh
src/steps/: configure_autologin.sh  configure_boot_parameters.sh  configure_display.sh  configure_display_touch.sh  configure_greetd.sh  configure_quiet_boot.sh  configure_system_parameters.sh  install_dependencies.sh  set_kiosk_url.sh  system_update.sh  wrap_up.sh
src/templates/: greetd_config.toml.template  greetd_configuration.toml.template  labwc_configuration.toml.template
