#############################
### Project Configuration ###
#############################

[build-system]
requires = ["flit_core>=3.8.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raspberry_pi_kiosk"
version = "0.0.0"
authors = [
    { name = "Miouzikal", email = "miouzikal@ccilo.ca" },
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = ["pygame>=2.5.2", "numpy>=1.26.3"]
dynamic = ["description"]

[project.optional-dependencies]
conda = [
    "autoflake>=1.7.5",
    "black-jupyter>=23.3",
    "black>=23.3",
    "commitizen>=2.20.3",
    "flit>=3.2,<4",
    "ipykernel>=6.22",
    "isort>=5.12",
    "pre-commit>=3.2.1",
    "pylint>=2.17.1",
    "pyright>=1.1",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "zip>=3.0",
]
pip = []

[project.urls]
Source = "https://github.com/miouzikal/raspberry_pi_kiosk"
Tracker = "https://github.com/miouzikal/raspberry_pi_kiosk/issues"
Changelog = "https://github.com/miouzikal/raspberry_pi_kiosk/blob/master/CHANGELOG.md"

[project.scripts]
raspberry_pi_kiosk = "raspberry_pi_kiosk.__main__:raspberry_pi_kiosk"


###########################
### Tools Configuration ###
###########################

[tool.autoflake]
ignore-init-module-imports = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version = "0.0.0"
version_files = ["pyproject.toml", "VERSION"]
version_type = "semver"

[tool.isort]
line_length = 120
profile = "black"
skip_gitignore = true

[tool.pylint.messages_control]
disable = ["fixme", "too-few-public-methods", "duplicate-code"]
max-line-length = 120

[tool.pyright] # also used by pylance
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
diagnosticMode = "workspace" # not sure if this is being used
